--- a/class-attendance-system/package.json
+++ b/class-attendance-system/package.json
@@ -58,6 +58,7 @@
     "next-themes": "^0.4.4",
     "nodemailer": "latest",
     "react": "^18",
+    "react-big-calendar": "^1.17.1",
     "react-day-picker": "latest",
     "react-dom": "^18",
     "react-hook-form": "latest",
