--- a/class-attendance-system/package.json
+++ b/class-attendance-system/package.json
@@ -57,6 +57,7 @@
     "next-auth": "latest",
     "next-themes": "^0.4.4",
     "nodemailer": "latest",
+    "pdfkit": "^0.16.0",
     "react": "^18",
     "react-big-calendar": "^1.17.1",
     "react-day-picker": "latest",
@@ -69,11 +70,13 @@
     "tailwindcss": "latest",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.6",
+    "xlsx": "^0.18.5",
     "zod": "latest"
   },
   "devDependencies": {
     "@types/js-cookie": "^3.0.6",
     "@types/node": "^22",
+    "@types/pdfkit": "^0.13.9",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "postcss": "^8",
