--- a/class-attendance-system/package.json
+++ b/class-attendance-system/package.json
@@ -79,6 +79,7 @@
     "@types/pdfkit": "^0.13.9",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/testing-library__jest-dom": "^5.14.9",
     "postcss": "^8",
     "tailwindcss": "^3.4.17",
     "typescript": "^5"
