--- a/class-attendance-system/package.json
+++ b/class-attendance-system/package.json
@@ -72,7 +72,8 @@
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.6",
     "xlsx": "^0.18.5",
-    "zod": "latest"
+    "zod": "latest",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@types/js-cookie": "^3.0.6",
