--- a/class-attendance/package.json
+++ b/class-attendance/package.json
@@ -37,13 +37,17 @@
     "@radix-ui/react-toggle": "^1.1.1",
     "@radix-ui/react-toggle-group": "^1.1.1",
     "@radix-ui/react-tooltip": "^1.1.6",
+    "@tanstack/react-query": "^5.67.2",
     "autoprefixer": "^10.4.20",
+    "axios": "^1.8.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.4",
     "date-fns": "latest",
     "embla-carousel-react": "8.5.1",
     "input-otp": "1.4.1",
+    "js-cookie": "^3.0.5",
+    "jwt-decode": "^4.0.0",
     "leaflet": "latest",
     "lucide-react": "^0.454.0",
     "next": "15.1.0",
@@ -62,6 +66,7 @@
     "zod": "latest"
   },
   "devDependencies": {
+    "@types/js-cookie": "^3.0.6",
     "@types/leaflet": "^1.9.16",
     "@types/node": "^22",
     "@types/react": "^19",
